--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,6 +2,6 @@
   width: 100vw;
   height: 10vh;
   text-align: center;
-  z-index: 1;
+  z-index: 0;
   background: $sub-bg;
 }
